UI-3221  [GateIn] Alignment Bugs on Add user, Group vs Page managenent

--- a/platform-ui-web-eXoResources/src/main/webapp/skin/less/Core.less
+++ b/platform-ui-web-eXoResources/src/main/webapp/skin/less/Core.less
@@ -426,7 +426,8 @@ Round corner box with title
 
 .uiGrayLightBox label {
   display: inline-block;
-  margin:5px 0 0 0;
+  margin: 0;
+  vertical-align: middle;
 }
 
 /* Create Margin and Padding Utilities Class */
